@@ -1,30 +1,23 @@
 package com.example.controller;
 
-import com.example.exception.BookNotFoundException;
 import com.example.model.book.BookResponse;
 import com.example.service.BookService;
-import org.junit.jupiter.api.BeforeAll;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Test;
-import org.mockito.ArgumentCaptor;
+import org.mockito.Mock;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
+import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
 import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.Mockito.any;
-import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
@@ -39,35 +32,55 @@ class BookControllerTest {
     @MockBean
     private BookService bookService;
 
-    private List<BookResponse> createTestBooks() {
-        return Arrays.asList(
-                new BookResponse("Book 1", LocalDate.of(1987, 11, 11), null),
-                new BookResponse("Book 2", LocalDate.of(1988, 11, 11), null),
-                new BookResponse("Book 3", LocalDate.of(1989, 11, 11), null)
+    @Autowired
+    private ObjectMapper objectMapper;
+
+    @Test
+    void getAllBooks_ShouldReturnPaginatedResults() throws Exception {
+        List<BookResponse> bookList = List.of(
+                new BookResponse("Book Title 1", LocalDate.of(1998, 11, 12), null),
+                new BookResponse("Book Title 2", LocalDate.of(1999, 11, 12), null)
         );
-    }
+        Page<BookResponse> bookPage = new PageImpl<>(bookList, PageRequest.of(0, 2), 2);
+        when(bookService.getAllBooks(PageRequest.of(0, 2))).thenReturn(bookPage);
 
-    @Test
-    void getAllBooks_shouldReturnPaginatedResults() throws Exception {
-        List<BookResponse> books = createTestBooks();
-        Pageable pageable = PageRequest.of(0, 2);
-        Page<BookResponse> mockPage = new PageImpl<>(books.subList(0, 2), pageable, books.size());
-
-        when(bookService.getAllBooks(any(Pageable.class))).thenReturn(mockPage);
-
-        mockMvc.perform(get("/books?page=0&size=2"))
+        mockMvc.perform(get("/books?page=0&size=2")
+                        .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.content.size()").value(2))
-                .andExpect(jsonPath("$.content[0].title").value("Book 1"))
-                .andExpect(jsonPath("$.content[0].realiseDate").value("1987-11-11"))
-                .andExpect(jsonPath("$.totalElements").value(3))
-                .andExpect(jsonPath("$.totalPages").value(2));
+                .andExpect(jsonPath("$.content.length()").value(2))
+                .andExpect(jsonPath("$.totalElements").value(2))
+                .andExpect(jsonPath("$.totalPages").value(1));
     }
-    @Test
-    void getBook_shouldReturnNotFound() throws Exception {
-        when(bookService.getBookById(anyLong())).thenThrow(BookNotFoundException.class);
 
-        mockMvc.perform(get("/books/999"))
-                .andExpect(status().isNotFound());
+    @Test
+    void getAllBooks_ShouldReturnPaginatedResultsWithSort() throws Exception {
+        List<BookResponse> bookList = List.of(
+                new BookResponse("Book 1", LocalDate.of(1998, 11, 12), null),
+                new BookResponse("The Book 2", LocalDate.of(1999, 11, 12), null)
+        );
+        Page<BookResponse> bookPage = new PageImpl<>(bookList, PageRequest.of(0, 2, Sort.by("title")), 2);
+        when(bookService.getAllBooks(PageRequest.of(0, 2, Sort.by("title")))).thenReturn(bookPage);
+
+        mockMvc.perform(get("/books?page=0&size=2&sort=title")
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.content.length()").value(2))
+                .andExpect(jsonPath("$.content[0].title").value("Book 1"))
+                .andExpect(jsonPath("$.content[1].title").value("The Book 2"))
+                .andExpect(jsonPath("$.totalElements").value(2))
+                .andExpect(jsonPath("$.totalPages").value(1));
+    }
+
+    @Test
+    void getAllBooks_ShouldReturnEmptyPage() throws Exception {
+        Page<BookResponse> emptyPage = new PageImpl<>(List.of(), PageRequest.of(0, 2), 0);
+        when(bookService.getAllBooks(PageRequest.of(0, 2))).thenReturn(emptyPage);
+
+        mockMvc.perform(get("/books?page=0&size=2")
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.content.length()").value(0))
+                .andExpect(jsonPath("$.totalElements").value(0))
+                .andExpect(jsonPath("$.totalPages").value(0));
     }
 }
